--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "author": "BeautyPie Engineering",
   "main": "index.js",
   "scripts": {
-    "build": "yarn clean && tsc",
+    "build": "npm run -s run-webpack && npm run -s package",
+    "run-webpack": "node --max_old_space_size=4096 ./node_modules/.bin/webpack --mode=production",
+    "package": "./infra/build-lambdas.sh",
     "clean": "rimraf dist/*",
     "lint": "eslint --ext ts . && cd infra && terraform fmt -recursive -check",
     "lint:fix": "eslint --ext ts --fix . && cd infra && terraform fmt -recursive",
@@ -15,10 +17,16 @@
     "test:coverage": "yarn test --coverage"
   },
   "dependencies": {
-    "@beautypie/logger": "^0.3.4"
+    "@beautypie/logger": "^1.4.2",
+    "@slack/bolt": "^3.12.2",
+    "aws-lambda": "^1.0.7",
+    "ts-loader": "^9.4.2",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   },
   "devDependencies": {
     "@beautypie/eslint-config": "^3.1.0",
+    "@types/aws-lambda": "^8.10.114",
     "@types/jest": "^28.1.4",
     "@types/node": "^18.0.3",
     "eslint": "^8.19.0",
@@ -30,7 +38,7 @@
     "ts-node": "^10.8.2",
     "typescript": "^4.7.4"
   },
-    "engines": {
+  "engines": {
     "node": ">=16"
   }
 }
